--- a/PROGRAMEREN/voer/app/build.gradle
+++ b/PROGRAMEREN/voer/app/build.gradle
@@ -72,6 +72,9 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5"
 
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+    implementation "android.arch.lifecycle:viewmodel:1.1.0"
+
     //DataBinding
     kapt "com.android.databinding:compiler:3.2.0-alpha10"
 
