--- a/PROGRAMEREN/voer/build.gradle
+++ b/PROGRAMEREN/voer/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
+    ext.kotlin_version = "1.6.10"
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
 
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0-rc01"
         // NOTE: Do not place your application dependencies here; they belong
