--- a/WInkelLijst/app/build.gradle
+++ b/WInkelLijst/app/build.gradle
@@ -10,7 +10,7 @@ android {
     buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.example.winkellijst"
-        minSdk 21
+        minSdk 26
         targetSdk 31
         versionCode 1
         versionName "1.0"
@@ -50,7 +50,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
+
     implementation "androidx.room:room-runtime:2.4.2"
     kapt "androidx.room:room-compiler:2.4.2"
     implementation "androidx.room:room-ktx:2.4.2"
@@ -64,5 +64,6 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.4.0"
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation "androidx.fragment:fragment-ktx:1.4.0"
-
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5"
 }
